Version 7.1. 29 May 2018 - XXX edition

Added ACB/ABC/BAC Stereo emulation

Some other minor bugfixes and improvements

Version 7.0. 25 May 2018 - Xeno edition

Added ZX-Evolution BaseConf emulation
Added BetaDisk and TR-DOS emulation
Added Spectrum +3 emulation
Added Spectrum keyboard ghosting error feature
Added ZX Spectrum Recreated keyboard support
Added improved Spectrum 16/48/+ colour palette
Added a fast spectrum core (with some features disabled) just for slow devices, like Raspberry Pi 1/Zero. Now ZEsarUX is playable on RPi1/Zero again!
Added setting to write protect IDE, MMC, ZX-Uno Flash
Added setting to show changelog when updating emulator version
Added actions to file utilities menu: Copy, Move, Rename
Added setting to disable persistent writes on IDE and MMC
Added setting to add a watermark on the display
Added setting to reduce display to a factor of 0.75. Used on RunZX event
Added setting to save spectrum screen to pbm file (black&white)
Added a setting to dump ram contents to file when exiting ZEsarUX, ideal to run automatic tests
Added setting to exit emulator after a number of seconds (--exit-after)
Added experimental simulation of the SAA1099 audio chip from the Sam Coupe
Added second Easter Egg ;)
Added third Easter Egg ;)

Improved debugging:
* new enhanced debug cpu menu: view TV electron position on screen, new default view, cursor, toggle breakpoints, run to cursor, change registers, and a lot more...
* added cpu-step-over function on debug menu (was already available from ZRCP)
* added function to write byte to file on ZEsarUX hardware debug ports

Improved ZRCP: 
* run command is stopped by default when pressing a key (or sending data to the socket)
* when a breakpoint is fired on cpu-step-mode, the breakpoint condition is shown on ZRCP

Improved joystick support: 
* added joystick test menu
* buttons to events and buttons to joystick configuration are saved on configuration file

Improved OSD keyboard: